sort.pancake.lessons.sort.pancake.BasicPancake.scala.error
BasicPancake:7: error: identifier expected but integer literal found.
		for (i <- t-2 : 0 by -1) {
                                ^BasicPancake:18: error: ')' expected but '}' found.
	}
        ^